samples/_failures_safe/1761353911_3b4675_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6a4710d9.c: In function ‘main’:
./samples/SAFE/__tmp_6a4710d9.c:161:9: error: expected declaration or statement at end of input
  161 |         buffer_free(&decompressed);
      |         ^~~~~~~~~~~
./samples/SAFE/__tmp_6a4710d9.c:161:9: error: expected declaration or statement at end of input
